<resources>
    <string name="app_name">Driver Booking App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_tag">Move with safety</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="relax_we_will_automatically_validate_otp">Relax. We will automatically validate OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_otp_below">Please enter OTP below</string>
    <string name="email_for_otp"><u>Email for OTP</u></string>
    <string name="call_for_otp"><u>Call for OTP</u></string>
    <string name="search">Search\n</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="loading">Loading...\n</string>
    <string name="title">TITLE</string>
    <string name="msg_token_fmt">FCM TOKEN</string>

    <string name="OpenSans_Bold">opensans_bold</string>
    <string name="OpenSans_BoldItalic">opensans_bolditalic</string>
    <string name="OpenSans_ExtraBold">opensans_extrabold</string>
    <string name="OpenSans_ExtraBoldItalic">opensans_extrabolditalic</string>
    <string name="OpenSans_Italic">opensans_italic</string>
    <string name="OpenSans_Light">opensans_light</string>
    <string name="OpenSans_LightItalic">opensans_lightitalic</string>
    <string name="OpenSans_Regular">opensans_regular</string>
    <string name="OpenSans_SemiBold">opensans_semibold</string>
    <string name="OpenSans_SemiBoldItalic">opensans_semibolditalic</string>
    <string name="modern">modern</string>
    <string name="courier_bold">courier_bold</string>
    <string name="roboto_black">roboto_black</string>
    <string name="sf_bold">sf_bold</string>
    <string name="no_notification_available">No notification available!\n</string>
    <string name="want_to_delete_all_the_notification">"Are you want to Delete All the Notification? "</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_description_is_here_display_with_small_text_size_and_with_some_fascinating_font_thnak_you">description\n</string>
    <string name="no_search_found">No Search Found!</string>
    <string name="no_data_avavilable">No Data Avavilable</string>
    <string name="are_you_sure_to_accept_this_ride">Are you sure to Accept this Ride</string>
    <string name="write_the_reason_for_rejecting_this_trip_here">Write  reason for rejecting this trip...</string>
    <string name="enter_your_mobile_number_or_email">Enter your mobile number or Email</string>
    <string name="pick_up">Pick Up</string>
    <string name="reason_for_rejecting_trip">Reason for Rejecting Trip</string>
    <string name="are_you_want_to_delete_the_notification">Are you want to delete the Notification</string>
    <string name="request">Request</string>
    <string name="full_name">Jainil Patel</string>
    <string name="mobile_number"><u>1234567890</u></string>
    <string name="people_count">2 People</string>
    <string name="from">Pickup Location :</string>
    <string name="textFrom"><u>Makarba</u></string>
    <string name="to">Drop Location :</string>
    <string name="txtTo"><u>Vastrapur</u></string>
    <string name="are_you_sure_for_pick_up">Are you sure for Pick Up</string>
    <string name="dialog_title">Dialog Title</string>

</resources>